# Sigma-CLI

./: Cargo.toml  LICENSE  README.md
rusigma/: Cargo.toml
rusigma/src/: client.rs  errors.rs  http.rs  lib.rs  response.rs
src/: handlers.rs  main.rs  subcommands.rs
