[package]
name = "rusigma"
version = "0.1.0"
authors = ["Sigma Corporation Software"]
license = "MIT License"
description = "A Rust wrapper for Sigma Search API."
edition = "2021"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.32"